fix overflow

--- a/src/components/Calendar/DayTimeline/Intervals/Intervals.module.scss
+++ b/src/components/Calendar/DayTimeline/Intervals/Intervals.module.scss
@@ -6,12 +6,7 @@
   border-radius: var(--radius);
   color: var(--background);
   transition: ease-in-out 0.1s;
-  &.--results {
-    &:hover {
-      margin: 0 !important;
-      filter: sepia(5%);
-    }
-  }
+  &.--results:hover,
   &.--focus {
     margin: 0 !important;
     filter: sepia(5%);
